objects/ATX__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pit_Stop__c</fullName>
        <label>Pit Stop</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Register__c</fullName>
        <formula>Hyperlink("http://go.tklgo.cisco.com/acc-atx", "Register Here")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Register</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Description__c</fullName>
        <label>Session Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Name__c</fullName>
        <label>Session Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ATX</label>
    <nameField>
        <label>ATX Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATXs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Session_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Date__c</columns>
        <columns>Time__c</columns>
        <columns>Session_Description__c</columns>
        <columns>Register__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>